Fixed button alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ button {
   font-weight: bold;
   background-color: #76b2e8;
   font-size: 16px;
-  margin-left: 25px;
+  margin-left: 32px;
   font-family: cursive;
 }
 
